k8s/kubectl_helm/hazelcast/jar-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jar-pod
spec:
  volumes:
    - name: custom-storage
      persistentVolumeClaim:
        claimName: jar-pvc
  containers:
    - name: app
      image: alpine
      volumeMounts:
        - name: custom-storage
          mountPath: /data/custom
      command: ["/bin/sh"]
      args: ["-c", "while [ ! -f /data/custom/complete.txt ]; do date >> /data/custom/dates.txt; sleep 5; done"]
#      args: ["-c", "while true; do date >> /data/custom/dates.txt; sleep 5; done"]
#      command: ["sh", "-ec", "while [ ! -f /data/custom/complete.txt ]; do echo '.'; sleep 5 ; done"]
