k8s/kubectl_helm/hazelcast/mc-ingress-enterprise.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mc-tls-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - mancenter.demo.com
    secretName: tls-secret
  rules:
  - host: "mancenter.demo.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kubectl-helm-hazelcast-enterprise-mancenter
            port:
              number: 8080
